# PluginTest

./: CMakeLists.txt  main.cpp
include/: baseclass.h  derivedclass.h  dynclass.h  petagon_hexagon.h  pluginhelper.h  polygon.h  rectangle.h  triangle.h
src/: derivedclass.cpp  dynclass.cpp  pentagon_hexagon.cpp  pluginhelper.cpp
